--- a/manifest.json
+++ b/manifest.json
@@ -20,8 +20,8 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "css": ["content.css"],
+      "js": ["texthighlight.js"],
+      "css": ["texthighlight.css"],
       "run_at": "document_end"
     }
   ],
