--- a/manifest.json
+++ b/manifest.json
@@ -11,11 +11,7 @@
   ],
   "action": {
     "default_popup": "popup.html",
-    "default_icon": {
-      "16": "highlight.png",
-      "48": "highlight.png",
-      "128": "highlight.png"
-    }
+    "default_icon": "highlight.png"
   },
   "content_scripts": [
     {
@@ -24,9 +20,15 @@
       "run_at": "document_end"
     }
   ],
+  "commands": {
+    "_execute_action": {
+      "suggested_key": {
+        "default": "Shift+H+L",
+        "mac": "Shift+H+L"
+      }
+    }
+  },
   "icons": {
-    "16": "highlight.png",
-    "48": "highlight.png",
     "128": "highlight.png"
   }
 }
