--- a/manifest.json
+++ b/manifest.json
@@ -23,8 +23,7 @@
   "commands": {
     "_execute_action": {
       "suggested_key": {
-        "default": "Shift+H+L",
-        "mac": "Shift+H+L"
+        "default": "Shift+H"
       }
     }
   },
