--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,8 @@
   "commands": {
     "_execute_action": {
       "suggested_key": {
-        "default": "Shift+H"
+        "default": "Ctrl+Shift+H",
+        "mac": "Command+Shift+H"
       }
     }
   },
