--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "name": "Text Highlighter",
   "version": "1.0",
   "description": "Highlight text on any webpage with persistent storage and Markdown export",
+  "homepage_url": "https://github.com/albus-droid/browser-text-highlighter-js",
   "permissions": [
     "storage",
     "activeTab",
