Fix browser action definition in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
     "scripting",
     "downloads"
   ],
-  "action": {
+  "browser_action": {
+    "default_title": "Text Highlighter",
     "default_popup": "popup.html",
     "default_icon": "highlight.png"
   },
